--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "grommet": "^2.21.0",
     "grommet-icons": "^4.7.0",
-    "react": "^18.1.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
-    "react-dom": "^18.1.0",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.5",
